# mmanager

./: .gitignore  README.md  pyproject.toml
main/: build.py
main/client/: client.py  setup_env.py
main/client/settings/: connections
main/client/source/: deauther.py  trojan.c  trojan.py
main/client/source/config/: compiler_config.h  compiler_config.py
